Set up image encoder

--- a/notebooks/MedCLIP.ipynb
+++ b/notebooks/MedCLIP.ipynb
@@ -131,7 +131,7 @@
    "id": "940161db",
    "metadata": {},
    "source": [
-    "# Full Class"
+    "# Full Text Encoder Class loading"
    ]
   },
   {
@@ -187,6 +187,22 @@
    "source": [
     "tmp = Model().embeddings([\"Patient has a cold\", \"Patient is vomiting blood\"])\n",
     "print(tmp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "761761b3",
+   "metadata": {},
+   "source": [
+    "## Image Encoder loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1ff3c32",
+   "metadata": {},
+   "source": [
+    "We use the swin transformer by microsoft: https://huggingface.co/microsoft/swinv2-tiny-patch4-window16-256"
    ]
   }
  ],
