Smooth notebooks between colab and codespaces

--- a/notebooks/MedCLIP.ipynb
+++ b/notebooks/MedCLIP.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPnp1WHljn1fXSMnioXLyTy",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Zain506/Similarity/blob/main/notebooks/MedCLIP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "a28_IQaUIlBV"
+      },
       "source": [
         "# Interpret and deploy MedCLIP pipeline\n",
         "\n",
@@ -46,31 +31,38 @@
         "- Transformers requires an AutoTokenizer to preprocess the text into IDs, with padding, truncation parameters\n",
         "- Then we use AutoModel which is the actual Neural Network to create an output\n",
         "- This outputs an embedding per token, and we take a representative pool for an entire sentence embedding"
-      ],
-      "metadata": {
-        "id": "a28_IQaUIlBV"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import tqdm\n",
-        "os.environ[\"TQDM_NOTEBOOK\"] = \"0\"\n",
-        "os.environ[\"TRANSFORMERS_NO_TQDM\"] = \"1\"\n",
-        "from google.colab import userdata\n",
-        "tok = userdata.get('HFTOKEN')\n",
-        "os.environ[\"HFTOKEN\"] = tok"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "QU-_cTRoLv_2"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import tqdm\n",
+        "from dotenv import load_dotenv\n",
+        "os.environ[\"TQDM_NOTEBOOK\"] = \"0\"\n",
+        "os.environ[\"TRANSFORMERS_NO_TQDM\"] = \"1\"\n",
+        "try:\n",
+        "    from google.colab import userdata\n",
+        "    tok = userdata.get('HFTOKEN')\n",
+        "except:\n",
+        "    load_dotenv()\n",
+        "    tok = os.getenv(\"HFTOKEN\")\n",
+        "os.environ[\"HFTOKEN\"] = tok"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "kHGRfe2QIn3E"
+      },
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer, AutoModel\n",
         "import torch\n",
@@ -80,38 +72,29 @@
         "    \"Patient has a sore throat and no other symptoms\",\n",
         "    \"Patient is vomiting blood and has a collapsed lung\"\n",
         "    ]"
-      ],
-      "metadata": {
-        "id": "kHGRfe2QIn3E"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "inputs = tokeniser(texts, padding=True, truncation=True, return_tensors=\"pt\") # Tokens\n",
-        "print(inputs)"
-      ],
+      "execution_count": 11,
       "metadata": {
-        "id": "krn9tOo4JaXO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "krn9tOo4JaXO",
         "outputId": "631f30b1-d0c6-45fb-de30-192044301dc0"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'input_ids': tensor([[  101,  5351,  1144,   170,  2504,   102,     0,     0,     0,     0,\n",
             "             0,     0],\n",
@@ -125,10 +108,31 @@
             "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}\n"
           ]
         }
+      ],
+      "source": [
+        "inputs = tokeniser(texts, padding=True, truncation=True, return_tensors=\"pt\") # Tokens\n",
+        "print(inputs)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LbSrWzYNJe54",
+        "outputId": "99fad868-c260-4787-918c-7e1081426a14"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([3, 12, 768])\n"
+          ]
+        }
+      ],
       "source": [
         "model = AutoModel.from_pretrained(\"emilyalsentzer/Bio_ClinicalBERT\") # Load Neural Network\n",
         "with torch.no_grad(): # Apply forward pass without calculating gradients to speed up computation\n",
@@ -136,64 +140,52 @@
         "\n",
         "hidden_states = outputs.last_hidden_state # \"Hidden_states\" is the attention-mechanism output\n",
         "print(hidden_states.shape)"
-      ],
-      "metadata": {
-        "id": "LbSrWzYNJe54",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "99fad868-c260-4787-918c-7e1081426a14"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([3, 12, 768])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Apply Pooling with a mask (similar to filtering Pandas DataFrame)\n",
-        "mask = inputs[\"attention_mask\"].unsqueeze(-1)\n",
-        "pooled = (hidden_states * mask).sum(dim=1) / mask.sum(dim=1)\n",
-        "print(pooled)"
-      ],
+      "execution_count": 13,
       "metadata": {
-        "id": "Y_kswWAOJjbq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Y_kswWAOJjbq",
         "outputId": "edba99fc-5b7c-41de-e51c-1f38f386fd64"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tensor([[ 0.5553,  0.0857, -0.4640,  ...,  0.0184,  0.0646, -0.1259],\n",
             "        [ 0.1498,  0.1194, -0.3643,  ...,  0.2049,  0.1319, -0.3943],\n",
             "        [ 0.1813,  0.0279, -0.3916,  ...,  0.2560,  0.1692, -0.3637]])\n"
           ]
         }
+      ],
+      "source": [
+        "# Apply Pooling with a mask (similar to filtering Pandas DataFrame)\n",
+        "mask = inputs[\"attention_mask\"].unsqueeze(-1)\n",
+        "pooled = (hidden_states * mask).sum(dim=1) / mask.sum(dim=1)\n",
+        "print(pooled)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Full Text Encoder class loading"
-      ],
       "metadata": {
         "id": "w8027HqDJkrS"
-      }
+      },
+      "source": [
+        "# Full Text Encoder class loading"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "aJ-RJgDiJnFg"
+      },
+      "outputs": [],
       "source": [
         "from transformers import AutoTokenizer, AutoModel\n",
         "import torch\n",
@@ -214,44 +206,57 @@
         "        mask = inputs[\"attention_mask\"].unsqueeze(-1)\n",
         "        pooled = (hidden_states * mask).sum(dim=1) / mask.sum(dim=1)\n",
         "        return pooled"
-      ],
-      "metadata": {
-        "id": "aJ-RJgDiJnFg"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tmp = Model().embeddings([\"Patient has a cold\", \"Patient is vomiting blood\"])\n",
-        "print(tmp)"
-      ],
+      "execution_count": 15,
       "metadata": {
-        "id": "pNRANOF6Jsh7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "pNRANOF6Jsh7",
         "outputId": "93fe8315-6462-4577-bb6d-457344e0c95a"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "tensor([[ 0.5553,  0.0857, -0.4640,  ...,  0.0184,  0.0646, -0.1259],\n",
             "        [ 0.2254,  0.1918, -0.5101,  ...,  0.2051,  0.2852, -0.2781]])\n"
           ]
         }
+      ],
+      "source": [
+        "tmp = Model().embeddings([\"Patient has a cold\", \"Patient is vomiting blood\"])\n",
+        "print(tmp)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyPnp1WHljn1fXSMnioXLyTy",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
