--- a/notebooks/image_encoder.ipynb
+++ b/notebooks/image_encoder.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyOcbcrApsVxDSguUUtlghEv",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Zain506/Similarity/blob/main/notebooks/image_encoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,16 +12,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Process image encoder here"
-      ],
       "metadata": {
         "id": "aPsz_8J5mBGq"
-      }
+      },
+      "source": [
+        "# Process image encoder here"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,21 +29,45 @@
         "id": "C3HfeQlBl_B3",
         "outputId": "e15e91a7-ece0-48f0-9063-0064d58d2275"
       },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import tqdm\n",
+        "from dotenv import load_dotenv\n",
+        "os.environ[\"TQDM_NOTEBOOK\"] = \"0\"\n",
+        "os.environ[\"TRANSFORMERS_NO_TQDM\"] = \"1\"\n",
+        "try:\n",
+        "    from google.colab import userdata\n",
+        "    tok = userdata.get('HFTOKEN')\n",
+        "except:\n",
+        "    load_dotenv()\n",
+        "    tok = os.getenv(\"HFTOKEN\")\n",
+        "os.environ[\"HFTOKEN\"] = tok\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
           "output_type": "stream",
+          "text": [
+            "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
+          ]
+        },
+        {
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Predicted class: Egyptian cat\n"
           ]
         }
       ],
       "source": [
-        "import os\n",
-        "os.environ[\"TQDM_NOTEBOOK\"] = \"0\"\n",
-        "os.environ[\"TRANSFORMERS_NO_TQDM\"] = \"1\"\n",
-        "\n",
-        "\n",
         "from transformers import AutoImageProcessor, AutoModelForImageClassification\n",
         "from PIL import Image\n",
         "import requests\n",
@@ -80,5 +86,32 @@
         "print(\"Predicted class:\", model.config.id2label[predicted_class_idx])"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyOcbcrApsVxDSguUUtlghEv",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
