Enable GPU processes

--- a/notebooks/MedCLIP.ipynb
+++ b/notebooks/MedCLIP.ipynb
@@ -16,12 +16,13 @@
         "id": "a28_IQaUIlBV"
       },
       "source": [
-        "# Interpret and deploy MedCLIP pipeline"
+        "## Load API keys\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 38,
       "metadata": {
         "collapsed": true,
         "id": "QU-_cTRoLv_2"
@@ -45,12 +46,12 @@
         "id": "w8027HqDJkrS"
       },
       "source": [
-        "## Text Encoder"
+        "## Text Encoder class"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 39,
       "metadata": {
         "id": "aJ-RJgDiJnFg"
       },
@@ -68,7 +69,7 @@
         "    def encode(self, texts):\n",
         "        inputs = self.tokenizer(texts, padding=True, truncation=True, return_tensors=\"pt\") # Tokens\n",
         "\n",
-        "        with torch.no_grad(): # Apply forward pass without calculating gradients to speed up computation\n",
+        "        with torch.no_grad(): # Not training: Apply forward pass without calculating gradients for speed\n",
         "            outputs = self.model(**inputs) # Apply Attention Mechanism to each token to generate embeddings\n",
         "\n",
         "        hidden_states = outputs.last_hidden_state # \"Hidden_states\" is the attention-mechanism output\n",
@@ -81,7 +82,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Image Encoder"
+        "## Image Encoder class"
       ],
       "metadata": {
         "id": "qBpGhJgiT6oV"
@@ -92,94 +93,73 @@
       "source": [
         "from transformers import AutoImageProcessor, AutoModelForImageClassification\n",
         "from PIL import Image\n",
+        "import torch\n",
         "\n",
         "class imageEncoder:\n",
         "  \"\"\"Image Encoder\"\"\"\n",
         "  def __init__(self, model=\"microsoft/swinv2-tiny-patch4-window16-256\"):\n",
+        "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "    self.processor = AutoImageProcessor.from_pretrained(model)\n",
-        "    self.model = AutoModelForImageClassification.from_pretrained(model)\n",
+        "    self.model = AutoModelForImageClassification.from_pretrained(model).to(device)\n",
+        "    self.device = device\n",
+        "    self.model.eval()\n",
         "\n",
         "  def encode(self, img: Image.Image):\n",
         "    image = img.convert(\"RGB\") # Convert from greyscale for dataset \"X-iZhang/CheXpert-plus-RRG\", \"findings_section\"\n",
         "    inputs = self.processor(images=image, return_tensors=\"pt\")\n",
-        "    outputs = self.model(**inputs)\n",
+        "\n",
+        "    inputs = {k: v.to(self.device) for k,v in inputs.items()}\n",
+        "    with torch.no_grad():\n",
+        "      outputs = self.model(**inputs)\n",
         "    logits = outputs.logits\n",
         "    return logits\n"
       ],
       "metadata": {
         "id": "gNY_it-jqmuv"
       },
-      "execution_count": 71,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Load Data with HuggingFace datasets"
+        "## Batch process multiple datapoints with GPU"
       ],
       "metadata": {
-        "id": "JY47PHVjgArX"
+        "id": "2oFMzwQI0hp9"
       }
     },
     {
       "cell_type": "code",
       "source": [
+        "from transformers import AutoImageProcessor, AutoModelForImageClassification\n",
+        "import torch\n",
+        "from typing import Dict, List\n",
         "from datasets import load_dataset\n",
         "\n",
-        "# Login using e.g. `huggingface-cli login` to access this dataset\n",
-        "ds = load_dataset(\"X-iZhang/CheXpert-plus-RRG\", \"findings_section\")"
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "model = \"microsoft/swinv2-tiny-patch4-window16-256\"\n",
+        "\n",
+        "\n",
+        "ds = load_dataset(\"X-iZhang/CheXpert-plus-RRG\", \"findings_section\") # Load dataset\n",
+        "\n",
+        "images = [ds[\"valid\"][i][\"main_image\"].convert(\"RGB\") for i in range(8)] # Create batch from data\n",
+        "\n",
+        "processor = AutoImageProcessor.from_pretrained(model) # Initialise encoder\n",
+        "\n",
+        "inputs: Dict[str, torch.Tensor] = processor(images=images, return_tensors=\"pt\") # Encode batch -> tensor on the CPU\n",
+        "inputs = {k: v.to(device) for k, v in inputs.items()} # Move tensor to GPU\n",
+        "\n",
+        "\n",
+        "with torch.no_grad(): # Without calculating gradients (no need to + improves speed)\n",
+        "  model = AutoModelForImageClassification.from_pretrained(model).to(device) # Initialise model (Neural Network) on GPU\n",
+        "  outputs: torch.Tensor = model(**inputs).logits # GPU model supplied with GPU tensor"
       ],
       "metadata": {
-        "id": "xc-UphBvgBkj"
-      },
-      "execution_count": 72,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Experimental fine-tuning"
-      ],
-      "metadata": {
-        "id": "DR-w0tIonsM3"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "img_embed = imageEncoder().encode(ds[\"valid\"][0][\"main_image\"])\n",
-        "text_embed = textEncoder().encode(\"Patient is fine\")"
-      ],
-      "metadata": {
-        "id": "AQBDPCuktcg_"
+        "id": "9IiB5sqs0mbP"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(img_embed.shape)\n",
-        "print(text_embed.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cRcl6-k0tpAJ",
-        "outputId": "3040ac5e-e4e0-457f-e787-bfa025408c3c"
-      },
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([1, 1000])\n",
-            "torch.Size([1, 768])\n"
-          ]
-        }
-      ]
     }
   ],
   "metadata": {
